--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/freshbooks/jobs/1940807'>Job Application for Senior Data Analyst - Lifecycle Marketing at FreshBooks</a></h5> 
+<p><span class="badge badge-light">Toronto</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://cover.applytojob.com/apply/9F6YOyA9dD/Data-Analyst'>Data Analyst - Cover - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-31</p>
@@ -91,13 +95,13 @@
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ebanx.recruiterbox.com/jobs/fk03oji/'>
+<h5><a href='https://ebanx.recruiterbox.com/jobs/fk03oji/'>
     Data Analyst PL at EBANX
 </a></h5> 
 <p><span class="badge badge-light">Curitiba</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://wingify.recruiterbox.com/jobs/fk0jqh9'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wingify.recruiterbox.com/jobs/fk0jqh9'>
     Data Analyst at Wingify Software Pvt. Ltd.
 </a></h5> 
 <p><span class="badge badge-light">Delhi, India</span></p>
@@ -131,7 +135,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=odssbfw2&__jvst=Employee+Referral&__jvsd=sSQvFhwE&__jvsc=Twitter&bid=no9bpMwo&jvi=odssbfw2,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=odssbfw2&__jvst=Employee+Referral&__jvsd=sSQvFhwE&__jvsc=Twitter&bid=no9bpMwo&jvi=odssbfw2,Job&jvk=Job'>Medidata Solutions Careers - Data Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -211,7 +215,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698451726-data-analyst'>Bosch Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -231,7 +235,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-27501'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Oklahoma City United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -247,11 +251,11 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/data-analyst-engineer-12016'>Data Analyst/Engineer - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/data-analyst-engineer-12016'>Data Analyst/Engineer - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/5bba8f9ac853-senior-data-analyst'>Senior Data Analyst at Benefits Data Trust</a></h5> 
+<h5><a href='https://benefits-data-trust.breezy.hr/p/5bba8f9ac853-senior-data-analyst'>Senior Data Analyst at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -287,7 +291,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
+<h5><a href='https://www.techjobsforgood.com/jobs/1198/'>Data Analyst at ACLU</a></h5> 
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -315,7 +319,7 @@
 <p><span class="badge badge-light">Montr?al, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://teksynap.hiringthing.com/job/156482/senior-data-analyst'>Senior Data Analyst @ TekSynap</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://teksynap.hiringthing.com/job/156482/senior-data-analyst'>Senior Data Analyst @ TekSynap</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -331,7 +335,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/data-analyst-1104'>Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light">Australia, VIC, Southbank</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -347,7 +351,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/carvana/jobs/1935818'>Job Application for Data Analyst, Operations at Carvana</a></h5> 
+<h5><a href='https://boards.greenhouse.io/carvana/jobs/1935818'>Job Application for Data Analyst, Operations at Carvana</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -359,7 +363,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/6sense/jobs/1931412'>Job Application for Data Analyst at 6sense</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/6sense/jobs/1931412'>Job Application for Data Analyst at 6sense</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -375,7 +379,7 @@
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/f5vjL70NSo/Data-Analyst'>Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/f5vjL70NSo/Data-Analyst'>Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -451,11 +455,11 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=cc02ebf91'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=cc02ebf91'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
 <p><span class="badge badge-light">Toronto, ON  Toronto, ON</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/c00c156b-b7e5-4db1-b8b4-fb5e0d8e0493'>Datacom - Service Desk Analyst - Fixed Term</a></h5> 
 <p><span class="badge badge-light">Adelaide</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -463,7 +467,7 @@
 <p><span class="badge badge-light">Brisbane Sydney Canberra Melbourne</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/asana/jobs/1930601'>Job Application for Data Analyst, Revenue Growth at Asana</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/asana/jobs/1930601'>Job Application for Data Analyst, Revenue Growth at Asana</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -482,10 +486,6 @@
 <h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698250348-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Australia  Paris</span></p>
-<p>Posted on: 2019-10-27</p>
 <hr/>
 
 
